all morning work

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="Register">注册</string>
     <string name="Login">登陆</string>
     <string name="Back">取消</string>
+
+    <string name="menu_settings">Settings</string>
+
 </resources>
