--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,6 @@
 
     <string name="menu_settings">Settings</string>
 
+    <string name="search_hint">search</string>
+    <string name="empty_list_msg">No Results</string>
 </resources>
